EXTRA_DIST = \
	myplayer.html

#MyPlayer.swf: MyPlayer.as
#	/opt/flex/bin/mxmlc -headless-server=true -static-link-runtime-shared-libraries=true -include-libraries+="./myslider.swc" $^
#	/opt/flex/bin/mxmlc -headless-server=true -static-link-runtime-shared-libraries=true $^

myplayerdir = $(datadir)/moment/myplayer
myplayer_DATA = index.tpl		\
		MyPlayer.swf            \
		playlist.json.tpl	\
		splash.png		\
		buffering.png		\
		connecting.png		\
		error.png		\
		horizontal.png		\
		fullscreen.png		\
		playlist.png		\
		favicon.ico		\
		url.js			\
		jquery-1.6.2.min.js	\
		jquery.js		\
		jquery-ui.js		\
		jquery-ui.css
